--- a/common/ld2450-base.yaml
+++ b/common/ld2450-base.yaml
@@ -1841,6 +1841,13 @@ uart:
             }
           }
 
+          // Clear last_zone_hold if targets are detected but not in any zone
+          // This prevents stale zone data from being used when assumed presence triggers
+          bool in_any_zone = (zone1_count > 0 || zone2_count > 0 || zone3_count > 0 || zone4_count > 0);
+          if (any_detected_now && !in_any_zone) {
+            id(last_zone_hold) = 0;
+          }
+
           static const int BUF_SZ = 600;
           struct Sample { unsigned long t; float x; float y; };
           static Sample hist[3][BUF_SZ];
