Add action response for device build configs

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -220,3 +220,58 @@ jobs:
       clean: false
       esphome_version: latest
       directory_name: everything-presence-lite-ha-mr24hpc1-no-ble-co2
+
+  # Generate firmware index after all builds complete
+  generate-firmware-index:
+    name: Generate Firmware Index
+    runs-on: ubuntu-latest
+    needs:
+      - publish-everything-presence-lite-ha
+      - publish-everything-presence-lite-ha-no-ble
+      - publish-everything-presence-lite-ha-ld2410
+      - publish-everything-presence-lite-ha-ld2410-no-ble
+      - publish-everything-presence-lite-ha-sen0395
+      - publish-everything-presence-lite-ha-sen0395-no-ble
+      - publish-everything-presence-lite-ha-sen0609
+      - publish-everything-presence-lite-ha-sen0609-no-ble
+      - publish-everything-presence-lite-ha-mr24hpc1
+      - publish-everything-presence-lite-ha-mr24hpc1-no-ble
+      - publish-everything-presence-lite-ha-co2
+      - publish-everything-presence-lite-ha-no-ble-co2
+      - publish-everything-presence-lite-ha-ld2410-co2
+      - publish-everything-presence-lite-ha-ld2410-no-ble-co2
+      - publish-everything-presence-lite-ha-sen0395-co2
+      - publish-everything-presence-lite-ha-sen0395-no-ble-co2
+      - publish-everything-presence-lite-ha-sen0609-co2
+      - publish-everything-presence-lite-ha-sen0609-no-ble-co2
+      - publish-everything-presence-lite-ha-mr24hpc1-co2
+      - publish-everything-presence-lite-ha-mr24hpc1-no-ble-co2
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Get version from esphome project
+        id: version
+        run: |
+          VERSION=$(grep -m1 'version:' common/everything-presence-lite-base.yaml | sed 's/.*version: *//' | tr -d '"' | tr -d "'")
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "Detected version: $VERSION"
+
+      - name: Generate firmware index
+        run: |
+          node scripts/generate-firmware-index.js --version "${{ steps.version.outputs.version }}"
+
+      - name: Deploy firmware index to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: .
+          target-folder: /
+          clean: false
+          single-commit: false
+          commit-message: "Update firmware-index.json for v${{ steps.version.outputs.version }}"
